--- a/index.html
+++ b/index.html
@@ -408,15 +408,75 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe-container">
+          <p class="subscribe-tittle">Підпишіться на розсилку</p>
+          <form name="subscribe-newsletter">
+            <label for="subscribe-mail"></label>
+            <input
+              type="email"
+              placeholder="E-mail"
+              name="subscribe-mail"
+              class="subscribe-mail-form"
+              id="subscribe-mail"
+            />
+
+            <button type="submit" class="footer-subscribe-btn">
+              Підписатися<svg class="footer-icon-send" width="24px" height="24px">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop" data-modal>
       <div class="modal">
         <button class="modal-close" type="button" data-modal-close>
           <svg class="modal-close-icon" width="18" height="18">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+        <h3 class="modal-tittle">Залиште свої дані, ми вам передзвонимо</h3>
+        <form name="modal-form">
+          <label for="client-name" class="field-title">Ім'я</label>
+          <div class="form-wrap">
+            <input type="text" name="client-name" class="modal-form-field" id="client-name" required />
+            <svg class="modal-form-icon" width="18px" height="18px">
+              <use href="./images/icons.svg#icon-person-form"></use>
+            </svg>
+          </div>
+          <label for="client-tel" class="field-title">Телефон</label>
+          <div class="form-wrap">
+            <input type="tel" name="client-tel" class="modal-form-field" id="client-tel" required />
+            <svg class="modal-form-icon" width="18px" height="18px">
+              <use href="./images/icons.svg#icon-phone-form"></use>
+            </svg>
+          </div>
+          <label for="client-email" class="field-title">Пошта</label>
+          <div class="form-wrap">
+            <input type="email" name="client-email" class="modal-form-field" id="client-email" required />
+            <svg class="modal-form-icon" width="18px" height="18px">
+              <use href="./images/icons.svg#icon-email-form"></use>
+            </svg>
+          </div>
+          <label for="client-comment" class="field-title">Коментар</label>
+
+          <textarea
+            name="client-comment"
+            class="client-comment"
+            id="client-comment"
+            placeholder="Введіть текст"
+          ></textarea>
+
+          <label for="modal-agree" class="modal-agree-field">
+            <input type="checkbox" class="modal-checkbox visually-hidden" id="modal-agree" required />
+            <span class="checkbox-icon"></span>
+            <span class="modal-agree-text">Погоджуюся з розсилкою та приймаю </span>
+            <a href="#" class="agree-link">Умови договору</a></label
+          >
+
+          <button type="submit" class="modal-submit-btn">Відправити</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
