--- a/portfolio.html
+++ b/portfolio.html
@@ -286,6 +286,25 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe-container">
+          <p class="subscribe-tittle">Підпишіться на розсилку</p>
+          <form name="subscribe-newsletter">
+            <label for="subscribe-mail"></label>
+            <input
+              type="email"
+              placeholder="E-mail"
+              name="subscribe-mail"
+              class="subscribe-mail-form"
+              id="subscribe-mail"
+            />
+
+            <button type="submit" class="footer-subscribe-btn">
+              Підписатися<svg class="footer-icon-send" width="24px" height="24px">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
