--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <h3 class="modal-tittle">Залиште свої дані, ми вам передзвонимо</h3>
+        <p class="modal-tittle">Залиште свої дані, ми вам передзвонимо</p>
         <form name="modal-form">
           <label for="client-name" class="field-title">Ім'я</label>
           <div class="form-wrap">
